--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bluebird": "^3.7.2",
     "express": "^4.18.1",
+    "lodash": "^4.17.21",
     "mysql2": "^2.3.3"
   },
   "devDependencies": {
