Added config files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,27 +3,16 @@
 # dependencies
 /frontend/node_modules
 /frontend/package-lock.json
-/frontend/.pnp
-/frontend/.pnp.js
 
-# testing
-/frontend/coverage
 
-# production
-/frontend/build
-
-# misc
-/frontend/.DS_Store
-/frontend/.env.local
-/frontend/.env.development.local
-/frontend/.env.test.local
-/frontend/.env.production.local
-
-/frontend/npm-debug.log*
-/frontend/yarn-debug.log*
-/frontend/yarn-error.log*
+.cache/
+coverage/
+/frontend/dist/*
+!/frontend/dist/index.html
+/frontend/*.log
 
 /backend/package-lock.json
 /backend/node_modules
 
 /backend/db/config.js
+/backend/config.js
